# aurant

./: .gitignore  README.md  docker-compose.yml
aws_setup/: analyze-security-groups.sh  check-logs.sh  create-backend-nlb.sh  create-deploy-role.sh  create-ecs-cluster.sh  create-frontend-alb.sh  forward-config-template.json  redirect-config-template.json
backend/: .example-env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.Dev
backend/.sqlx/: query-074bd311ac3f6d09b52f19337eebd17caeaa15eccbf73cc142fec4dfef52659e.json  query-134f3af3138442b2a9487540a08a7c07dd67c1dd2d7f8b27be22107880c0c057.json  query-2e68f8db48e9fe96ce1edf2cd73b098c088bd0990c713e0e6cc3e677dda0c373.json  query-3b6e6a61db87ceb4be114ccd4044db622c965fefcd86f7dd36e4416f72ed03c5.json  query-4e766a6b18066c0ba10e2db32bb54c9c44cc81098e09cca5b31388ad58840fa3.json  query-567645094a9de9abfbcbbff251980ab834f95e1006d2e1e52ddda877230d1fdc.json  query-573d02719af49c6990f4aa397ff7120aef650377fb8b759151304112b34b097f.json  query-621f394e53fe71757d2b55c5f752211c894039400784a1ece95d026f0a7f18e9.json  query-88085d473c5d537cc3948f702ce636137d193fd3244a67a34ff04f6e839f2828.json  query-a184f9cf791e2f1cecc7b55e4ba30202837b8a4794ff938a0247e5b40c37cde6.json  query-b99b5819ffb5f0972ccfabdf1ad5a6e317409799ce089bef34523f38d32b7d44.json  query-c613f47d8c096e3e7d9dc21dc4688593d90fca8be83c1d3fb2fc4227906dede6.json  query-de9c9e2c3b7260eb1a0ae640666aefcb0b655a8994a97b4ddf0784fff10d4999.json
backend/src/: db.rs  main.rs
backend/src/handlers/menu/: mod.rs
frontend/: .eslintrc.json  Dockerfile  Dockerfile.Dev  package-lock.json  (+2 more)
(+44 files in other folders)
